# nonebot-plugin-algo

./: .gitignore  LICENSE  README.md  pyproject.toml
nonebot_plugin_algo/: __init__.py  command.py  config.py  luogu.py  mapper.py  query.py  scheduler.py  subscribe.py  util.py
nonebot_plugin_algo/assets/template/: cf_card.html  full-style.css  lougu_card.html  sample-style.css  sample_card.html
nonebot_plugin_algo/oj/: __init__.py
nonebot_plugin_algo/oj/cf/: __init__.py  api.py  build.py
nonebot_plugin_algo/oj/luogu/: __init__.py  api.py  build.py
nonebot_plugin_algo/resources/: lougu_card.html  lougu_card_simple.html  luogu_card_full.html  test.html
tests/: __init__.py  bot.py  config.py  data_source.py  query.py  subscribe.py  util.py
