[project]
name = "nonebot-plugin-algo"
version = "0.3.2"
description = "NoneBot2 插件：算法比赛助手,支持 OJ 比赛与题目查询,订阅提醒,洛谷与 Codeforces 用户信息查询"
authors = [
    { name = "Tabris-ZX", email = "3146463122@qq.com" },
]
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10,<4.0"
keywords = ["nonebot", "nonebot2", "algorithm", "contest", "ACM", "XCPC", "codeforces", "luogu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "nonebot2>=2.4.3",
    "arclet-alconna>=1.8.44",
    "httpx>=0.24",
    "nonebot-plugin-alconna>=0.49.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-uninfo>=0.9.0",
    "jinja2>=3.1.6",
    "playwright>=1.55.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/Tabris-ZX/nonebot-plugin-algo"
Repository = "https://github.com/Tabris-ZX/nonebot-plugin-algo.git"
Issues = "https://github.com/Tabris-ZX/nonebot-plugin-algo/issues"

[dependency-groups]
dev = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "ruff>=0.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nonebot_plugin_algo"]

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/nonebot_plugin_algo",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

# ================= 代码质量工具配置 =================
[tool.black]
line-length = 90
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 90
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 90
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E731", "E402"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"

# ================= NoneBot 配置 =================
[tool.nonebot]
adapters = [{ name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }]
plugins = ["nonebot_plugin_algo"]
